I've unified the backend module naming to `chatapp`. Here's a summary of the changes I made:
- Renamed `backend/app` to `backend/chatapp`.
- Updated the parent `pom.xml` to reflect the directory name change.
- Moved the integration and contract tests to the `chatapp` module.
- Removed the `integration-test` and `contract-test` modules.